Cambiar color primario de los equipos

--- a/src/components/Equipo/Equipo.css
+++ b/src/components/Equipo/Equipo.css
@@ -4,6 +4,19 @@
   box-sizing: border-box;
   text-align: center;
   font-size: 32px;
+
+  position: relative;
+}
+
+.cambiar-color {
+  position: absolute;
+  right: 50px;
+  top: 20px;
+
+  background: none;
+  border: none;
+  height: 40px;
+  width: 40px;
 }
 
 .equipo h3 {
