--- a/src/components/Colaborador/Colaborador.css
+++ b/src/components/Colaborador/Colaborador.css
@@ -1,6 +1,7 @@
 .colaborador {
   width: 280px;
   margin: 26px 0;
+  position: relative;
 }
 
 .colaborador .encabezado {
@@ -39,4 +40,13 @@
   padding: 0 24px;
   font-weight: 400;
   margin: 0;
+}
+
+.eliminar {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+
+  font-size: 30px;
+  cursor: pointer;
 }
