--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,15 +1,19 @@
 .formulario {
   display: flex;
   justify-content: center;
+  align-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 45px;
   margin: 80px 0;
 }
 
 .formulario form {
   max-width: 80%;
   background-color: #f7f7f7;
-  box-shadow: 7px 7px 15px rgba(0, 0, 0, 20%);
+  box-shadow: 7px 7px 15px rgba(0, 0, 0, 25%);
   border-radius: 20px;
-  padding: 30px 100px;
+  padding: 30px 90px;
 }
 
 .formulario h2 {
