--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -1,9 +1,9 @@
-.campo-texto {
+.campo {
   margin: 24px 0;
   font-family: "Montserrat", sans-serif;
 }
 
-.campo-texto label {
+.campo label {
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
   font-weight: 600;
@@ -12,7 +12,7 @@
   margin-bottom: 8px;
 }
 
-.campo-texto input {
+.campo input {
   width: 100%;
   height: 80px;
   background-color: #ffffff;
@@ -25,11 +25,16 @@
   outline: none;
 }
 
-.campo-texto input::placeholder {
+.campo input::placeholder {
   color: #a4a4a4;
   font-family: Montserrat;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.campo-color input {
+  width: 100%;
+  padding: 15px;
 }
