Agregando funcionalidad de agregar a favoritos a los colaboradores

--- a/src/components/Colaborador/Colaborador.css
+++ b/src/components/Colaborador/Colaborador.css
@@ -50,3 +50,11 @@
   font-size: 30px;
   cursor: pointer;
 }
+
+.fav {
+  position: absolute;
+  right: 125px;
+  bottom: 5px;
+
+  cursor: pointer;
+}
